[package]
name = "bmi160"
version = "1.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/bmi160-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the BMI160 inertial measurement unit (IMU)."
readme = "README.md"
keywords = ["inertial", "accelerometer", "gyroscope", "imu", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/bmi160-rs"
documentation = "https://docs.rs/bmi160"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "0.3.6", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.4.0"
embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }

[profile.release]
lto = true

[features]
defmt = ["dep:defmt"]
